# UnityVisionAgents

./: .gitignore  CMakeLists.txt  README.md  build.sh  replace_unity_libs.sh  slam.ipynb
UnityScripts/: AgentInterface.cs  DepthData.shader  SubjectMovement.cs
include/: agents.h  classifier.h  logging.h  model.h  preprocessor.h  residualblock.h  utils.h
src/: actorcriticagent.cpp  classificationagent.cpp  classifier.cpp  model.cpp  preprocessor.cpp  residualblock.cpp  utils.cpp
